--- a/blog/blog_part/templates/blog/post/list.html
+++ b/blog/blog_part/templates/blog/post/list.html
@@ -5,12 +5,16 @@
 {% for post in posts %}
 <div class="blog_wrap">
     <h5 class="is-size-5 has-text-centered title"> {{ post.title }}</h5>
-    <p class="blog_body"> {{ post.body|truncatewords:30|linebreaks }}</p>
+
+  <img src="{{ post.blog_Post_Img.url }}"style="width: 200px"  >
+
+    <p class="blog_body"> {{ post.body|truncatewords:30|linebreaks }} </p>
     <p class="blog_time"> Опубликовано {{ post.publish }} by {{ post.author }} </p>
     <a href="{{ post.get_absolute_url }}">  продолжить чтение... </a>
 </div>
 {% endfor %}
 
 
+{% include "pagination.html" with page=posts %}
 
 {% endblock %}
